--- a/source/layouts/pdf.erb
+++ b/source/layouts/pdf.erb
@@ -26,8 +26,8 @@
     <h1><%= current_page.data.title %></h1>
 
     <footer>
-        <div>Version  <%= current_page.data.version %></div>
-        <div>Date: <%= Time.new.strftime("%Y-%m-%d") %></div>
+        <div>Versione  <%= current_page.data.version %></div>
+        <div>Data: <%= Time.new.strftime("%d-%m-%Y") %></div>
     </footer>
 </section>
 <section class="content">
