--- a/source/includes/_cambio_password.md.erb
+++ b/source/includes/_cambio_password.md.erb
@@ -25,7 +25,7 @@ curl
   -H "Accept: application/vnd.dardy.sso.v1+json"
   -H "Content-Type: application/json"
   -H "Authorization: Dardy <jwt>"
-  https://api.dardy.me/sso/password/reset
+  <%= current_page.data.api_base_url %>/password/reset
 ```
 
 ```ruby
@@ -33,7 +33,7 @@ curl
 
 require 'httparty'
 
-HTTParty.post('https://api.dardy.me/sso/password/reset',
+HTTParty.post('<%= current_page.data.api_base_url %>/password/reset',
   body: '{"user": {
             "email": "test@example.com",
             "callback_url": "https//mio.sito.com/change/password (opzionale)"
@@ -52,7 +52,7 @@ HTTParty.post('https://api.dardy.me/sso/password/reset',
 
 $.ajax({
   type: "POST",
-  url: "https://api.dardy.me/sso/password/reset",
+  url: "<%= current_page.data.api_base_url %>/password/reset",
   data: '{' +
     '"user": {' +
       '"email": "test@example.com",' +
@@ -84,7 +84,7 @@ Per utilizzare questo endpoint è necessario creare una [sessione](#sessione).
 
 ### Richiesta HTTP
 
-`POST https://api.dardy.me/sso/password/reset`
+`POST <%= current_page.data.api_base_url %>/password/reset`
 
 ### Headers HTTP
 
@@ -122,7 +122,7 @@ curl
   -H "Accept: application/vnd.dardy.sso.v1+json"
   -H "Content-Type: application/json"
   -H "Authorization: Dardy <jwt>"
-  https://api.dardy.me/sso/password/reset/<reset-code>
+  <%= current_page.data.api_base_url %>/password/reset/<reset-code>
 ```
 
 ```ruby
@@ -130,7 +130,8 @@ curl
 
 require 'httparty'
 
-HTTParty.put('https://api.dardy.me/sso/password/reset/<reset-code>',
+HTTParty.put(
+  '<%= current_page.data.api_base_url %>/password/reset/<reset-code>',
   body: '{"user": {
             "password": "new_secret123",
             "password_confirmation": "new_secret123"
@@ -149,7 +150,7 @@ HTTParty.put('https://api.dardy.me/sso/password/reset/<reset-code>',
 
 $.ajax({
   type: "PUT",
-  url: "https://api.dardy.me/sso/password/reset",
+  url: "<%= current_page.data.api_base_url %>/password/reset",
   data: '{' +
     '"user": {' +
       '"password": "new_secret123",' +
@@ -172,7 +173,7 @@ Per utilizzare questo endpoint è necessario creare una [sessione](#sessione).
 
 ### Richiesta HTTP
 
-`PUT https://api.dardy.me/sso/password/reset/<reset-code>`
+`PUT <%= current_page.data.api_base_url %>/password/reset/<reset-code>`
 
 ### Parametri
 
