--- a/source/includes/_cambio_password.md.erb
+++ b/source/includes/_cambio_password.md.erb
@@ -2,109 +2,7 @@
 
 ### Descrizione
 
-Il cambio password si completa in due fasi:
-
-* Richiesta cambio password
-* Cambio password
-
-## Richiesta cambio password
-
-> Esempio
-
-```shell
-
-# cURL
-
-curl
-  -X POST
-  -d '{"user": {
-        "email": "test@example.com",
-        "callback_url": "https//mio.sito.com/change/password (opzionale)"
-      }
-    }'
-  -H "Accept: application/vnd.dardy.sso.v1+json"
-  -H "Content-Type: application/json"
-  -H "Authorization: Dardy <jwt>"
-  <%= current_page.data.api_base_url %>/password/reset
-```
-
-```ruby
-# Ruby
-
-require 'httparty'
-
-HTTParty.post('<%= current_page.data.api_base_url %>/password/reset',
-  body: '{"user": {
-            "email": "test@example.com",
-            "callback_url": "https//mio.sito.com/change/password (opzionale)"
-           }
-         }',
-  headers: {
-    'Accept' => 'application/vnd.dardy.sso.v1+json',
-    'Content-Type' => 'application/json',
-    'Authorization' => 'Dardy <jwt>'
-  }
-)
-```
-
-```javascript
-// jQuery
-
-$.ajax({
-  type: "POST",
-  url: "<%= current_page.data.api_base_url %>/password/reset",
-  data: '{' +
-    '"user": {' +
-      '"email": "test@example.com",' +
-      '"callback_url": "https//mio.sito.com/change/password (opzionale)"' +
-    '}' +
-  '}',
-  headers: {
-    "Accept": "application/vnd.dardy.sso.v1+json",
-    "Content-Type": "application/json",
-    "Authorization": "Dardy <jwt>"
-  }
-});
-```
-
-Invia una mail all'indirizzo dell'utente che ha richiesto il cambio password.
-
-Esistono due template per la mail di richiesta cambio password:
-
-1. Con codice cambio password (mobile)
-  * Escludendo `callback_url` dal corpo del messaggio HTTP
-2. Con link alla pagina di cambio password (web)
-  * Includendo `callback_url` nel corpo del messaggio HTTP
-  * il codice cambio password viene appeso all'url `callback_url`
-
-
-**Nota**
-
-Per utilizzare questo endpoint è necessario creare una [sessione](#sessione).
-
-### Richiesta HTTP
-
-`POST <%= current_page.data.api_base_url %>/password/reset`
-
-### Headers HTTP
-
-`Accept: application/vnd.dardy.sso.v1+json`
-
-`Authorization: Dardy <jwt>`
-
-<aside class="warning">
-  Sostituire <code>&lt;jwt&gt;</code> con il token presente nell'header della risposta alla chiamata di sessione.
-</aside>
-
-### Codici risposta HTTP
-
-Codice | Descrizione
--------| -------
-201 | Created -- La richiesta è andata a buon fine
-404 | Not Found -- Email non trovata
-422 | Unprocessable Entity -- Errore di validazione
-
-## Cambio password
+Il cambio password viene utilizzato per tutti gli utenti che hanno effettuato l'accesso al sistema.
 
 > Esempio
 
@@ -116,13 +14,14 @@ curl
   -X PUT
   -d '{"user": {
         "password": "new_secret123",
-        "password_confirmation": "new_secret123"
+        "new_password": "new_secret123",
+        "new_password_confirmation": "new_secret123"
       }
     }'
   -H "Accept: application/vnd.dardy.sso.v1+json"
   -H "Content-Type: application/json"
   -H "Authorization: Dardy <jwt>"
-  <%= current_page.data.api_base_url %>/password/reset/<reset-code>
+  <%= current_page.data.api_base_url %>/user/<id>/password/change
 ```
 
 ```ruby
@@ -131,10 +30,11 @@ curl
 require 'httparty'
 
 HTTParty.put(
-  '<%= current_page.data.api_base_url %>/password/reset/<reset-code>',
+  '<%= current_page.data.api_base_url %>/user/<id>/password/change',
   body: '{"user": {
             "password": "new_secret123",
-            "password_confirmation": "new_secret123"
+            "new_password": "new_secret123",
+            "new_password_confirmation": "new_secret123"
            }
          }',
   headers: {
@@ -150,11 +50,12 @@ HTTParty.put(
 
 $.ajax({
   type: "PUT",
-  url: "<%= current_page.data.api_base_url %>/password/reset",
+  url: "<%= current_page.data.api_base_url %>/user/<id>/password/change",
   data: '{' +
     '"user": {' +
       '"password": "new_secret123",' +
-      '"password_confirmation": "new_secret123"' +
+      '"new_password": "new_secret123",' +
+      '"new_password_confirmation": "new_secret123"' +
     '}' +
   '}',
   headers: {
@@ -173,13 +74,13 @@ Per utilizzare questo endpoint è necessario creare una [sessione](#sessione).
 
 ### Richiesta HTTP
 
-`PUT <%= current_page.data.api_base_url %>/password/reset/<reset-code>`
+`PUT <%= current_page.data.api_base_url %>/user/<id>/password/change`
 
 ### Parametri
 
 Parameter | Description
 --------- | -----------
-&lt;reset-code&gt; | Codice di reset fornito dall'utente che ha ricevuto la mail
+&lt;id&gt; | Id dell'utente che ha effettuato l'accesso al sistema
 
 ### Headers HTTP
 
@@ -196,5 +97,6 @@ Parameter | Description
 Codice | Descrizione
 -------| -------
 200 | OK -- La richiesta è andata a buon fine
-404 | Not Found -- Codice non trovato
+401 | Unauthorized -- Password non valida
+404 | Not Found -- Utente non trovato
 422 | Unprocessable Entity -- Errore di validazione
