--- a/source/includes/_introduzione.md.erb
+++ b/source/includes/_introduzione.md.erb
@@ -8,5 +8,7 @@ Gli account registrati che intendono aderire al sistema di autenticazione hanno 
 * Sessione account
 * Registrazione utente (double opt-in)
 * Autenticazione utente
-* Cambio password (double opt-in)
+* Reset password utente (double opt-in)
+* Cambio password utente
+* Dettaglio utente
 * Aggiornamento profilo utente
