add consents doc

--- a/source/includes/_introduzione.md.erb
+++ b/source/includes/_introduzione.md.erb
@@ -1,5 +1,7 @@
 # Introduzione
 
+### Descrizione
+
 SSO è un sistema di autenticazione centralizzato per web e mobile.
 Espone servizi (endpoints) in modalità REST per la registrazione, autenticazione e notifiche mail.
 
