--- a/source/includes/_reinvio.md.erb
+++ b/source/includes/_reinvio.md.erb
@@ -1,5 +1,7 @@
 ## Reinvio codice attivazione
 
+### Descrizione
+
 Reinvia la mail di registrazione all'indirizzo specificato dall'utente.
 
 Esistono due template per l'invio del codice di attivazione:
