--- a/source/includes/_reset_password.md.erb
+++ b/source/includes/_reset_password.md.erb
@@ -9,6 +9,18 @@ Il reset della password si completa in due fasi:
 
 ## Richiesta reset password
 
+### Descrizione
+
+Invia una mail all'indirizzo dell'utente che ha richiesto il reset della password.
+
+Esistono due template per la mail di richiesta reset password:
+
+1. Con codice reset password (mobile)
+  * Escludendo `callback_url` dal corpo del messaggio HTTP
+2. Con link alla pagina di reset password (web)
+  * Includendo `callback_url` nel corpo del messaggio HTTP
+  * il codice reset password viene appeso all'url `callback_url`
+
 > Esempio
 
 ```shell
@@ -67,17 +79,6 @@ $.ajax({
 });
 ```
 
-Invia una mail all'indirizzo dell'utente che ha richiesto il reset della password.
-
-Esistono due template per la mail di richiesta reset password:
-
-1. Con codice reset password (mobile)
-  * Escludendo `callback_url` dal corpo del messaggio HTTP
-2. Con link alla pagina di reset password (web)
-  * Includendo `callback_url` nel corpo del messaggio HTTP
-  * il codice reset password viene appeso all'url `callback_url`
-
-
 **Nota**
 
 Per utilizzare questo endpoint è necessario creare una [sessione](#sessione).
@@ -105,6 +106,10 @@ Codice | Descrizione
 422 | Unprocessable Entity -- Errore di validazione
 
 ## Reset password
+
+### Descrizione
+
+Effetua il reset della password utilizzando le nuove credenziali.
 
 > Esempio
 
@@ -164,8 +169,6 @@ $.ajax({
   }
 });
 ```
-
-Effetua il reset della password utilizzando le nuove credenziali.
 
 **Nota**
 
