--- a/source/includes/_dettaglio.md.erb
+++ b/source/includes/_dettaglio.md.erb
@@ -1,5 +1,9 @@
 # Dettaglio Utente
 
+### Descrizione
+
+Ritorna il dettaglio dell'utente.
+
 > Esempio
 
 ```shell
@@ -57,8 +61,6 @@ $.ajax({
   }
 }
 ```
-
-Ritorna il dettaglio dell'utente.
 
 **Nota**
 
