--- a/source/includes/_profilo.md.erb
+++ b/source/includes/_profilo.md.erb
@@ -115,7 +115,7 @@ Per utilizzare questo endpoint è necessario creare una [sessione](#sessione).
 
 ### Parametri
 
-Parameter | Description
+Parametro | Descrizione
 --------- | -----------
 &lt;id&gt; | Id dell'utente che ha richiesto l'aggiornamento del profilo
 
