--- a/source/includes/_cambio_password.md.erb
+++ b/source/includes/_cambio_password.md.erb
@@ -78,7 +78,7 @@ Per utilizzare questo endpoint è necessario creare una [sessione](#sessione).
 
 ### Parametri
 
-Parameter | Description
+Parametro | Descrizione
 --------- | -----------
 &lt;id&gt; | Id dell'utente che ha effettuato l'accesso al sistema
 
