--- a/source/includes/_registrazione.md.erb
+++ b/source/includes/_registrazione.md.erb
@@ -321,7 +321,7 @@ Per utilizzare questo endpoint è necessario creare una [sessione](#sessione).
 
 ### Parametri
 
-Parameter | Description
+Parametro | Descrizione
 --------- | -----------
 &lt;activation-code&gt; | Codice di attivazione fornito dall'utente che ha ricevuto la mail
 
