add change user email toc

--- a/source/includes/_introduzione.md.erb
+++ b/source/includes/_introduzione.md.erb
@@ -12,5 +12,6 @@ Gli account registrati che intendono aderire al sistema di autenticazione hanno 
 * Autenticazione utente
 * Reset password utente (double opt-in)
 * Cambio password utente
+* Cambio mail utente (double opt-in)
 * Dettaglio utente
 * Aggiornamento profilo utente
